fix style to enable horizontal scrolling

--- a/root/2d/style/main.css
+++ b/root/2d/style/main.css
@@ -31,9 +31,10 @@ body {
 
     text-align: center;
 }
-#maze-grid {
+#maze-grid-parent {
     background-color: black;
     position: relative;
+    width: 100dvw;
 }
 #maze-grid > rect.current-player {
     fill: green;
@@ -62,7 +63,7 @@ body {
     height: fit-content;
     width: 100dvw;
     background-color: rgb(6, 9, 0);
-    padding: 5px;
+    padding: 5px 0;
     z-index: 1;
     margin: 0 auto;
     bottom: 0;
